--- a/index.html
+++ b/index.html
@@ -1,57 +1,70 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <title>Oliveira Diesel</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #111;
-            color: #fff;
-            text-align: center;
-        }
-        .container {
-            max-width: 420px;
-            margin: auto;
-            padding: 20px;
-        }
-        img {
-            width: 100%;
-            border-radius: 12px;
-            margin-bottom: 20px;
-        }
-        h1 {
-            margin-bottom: 25px;
-        }
-        a {
-            display: block;
-            text-decoration: none;
-            color: #fff;
-            background: #25D366;
-            padding: 15px;
-            border-radius: 10px;
-            margin-bottom: 15px;
-            font-size: 18px;
-        }
-        a.tel {
-            background: #007bff;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>Oliveira Diesel</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    background: url('o.png') no-repeat center center fixed;
+    background-size: cover;
+    font-family: Arial, sans-serif;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.15);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding-bottom: 40px;
+    box-sizing: border-box;
+}
+
+.btn {
+    width: 90%;
+    max-width: 420px;
+    padding: 18px;
+    margin: 10px 0;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+    border-radius: 12px;
+    text-decoration: none;
+}
+
+.whatsapp {
+    background: #25D366;
+}
+
+.ligar {
+    background: #1a73e8;
+}
+</style>
 </head>
+
 <body>
-    <div class="container">
-        <img src="caminhao.png" alt="Caminhão Oliveira Diesel">
-        <h1>Oliveira Diesel</h1>
+<div class="overlay">
 
-        <a href="https://wa.me/5511964052649" target="_blank">
-            💬 Chamar no WhatsApp
-        </a>
+    <a class="btn ligar" href="tel:5511964052649">
+        📞 LIGAR AGORA
+    </a>
 
-        <a href="tel:5511964052649" class="tel">
-            📞 Ligar agora
-        </a>
-    </div>
+    <a class="btn whatsapp" href="https://wa.me/5511964052649" target="_blank">
+        💬 CHAMAR NO WHATSAPP
+    </a>
+
+</div>
 </body>
 </html>
