--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ html, body {
 }
 
 body {
-    background: url('o.png') no-repeat center center fixed;
+    background: url('caminhao.png') no-repeat center center fixed;
     background-size: cover;
     font-family: Arial, sans-serif;
 }
