--- a/index.html
+++ b/index.html
@@ -6,57 +6,67 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-html, body {
+* {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
-}
-
-body {
-    background: url('caminhao.png') no-repeat center center fixed;
-    background-size: cover;
-    font-family: Arial, sans-serif;
-}
-
-.overlay {
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.15);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    padding-bottom: 40px;
     box-sizing: border-box;
 }
 
+body {
+    background: #0b0f14;
+    font-family: Arial, sans-serif;
+}
+
+/* Área da imagem */
+.hero {
+    width: 100%;
+    max-width: 480px;
+    height: 65vh;
+    max-height: 520px;
+    margin: 0 auto;
+    background: url('caminhao.png') no-repeat center top;
+    background-size: cover;
+    border-bottom-left-radius: 22px;
+    border-bottom-right-radius: 22px;
+}
+
+/* Área dos botões */
+.actions {
+    width: 100%;
+    max-width: 480px;
+    margin: 0 auto;
+    padding: 25px 16px 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+}
+
 .btn {
-    width: 90%;
-    max-width: 420px;
+    width: 100%;
     padding: 18px;
-    margin: 10px 0;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
     color: #fff;
-    border-radius: 12px;
+    border-radius: 14px;
     text-decoration: none;
-}
-
-.whatsapp {
-    background: #25D366;
 }
 
 .ligar {
     background: #1a73e8;
 }
+
+.whatsapp {
+    background: #25D366;
+}
 </style>
 </head>
 
 <body>
-<div class="overlay">
 
+<div class="hero"></div>
+
+<div class="actions">
     <a class="btn ligar" href="tel:5511964052649">
         📞 LIGAR AGORA
     </a>
@@ -64,7 +74,7 @@ body {
     <a class="btn whatsapp" href="https://wa.me/5511964052649" target="_blank">
         💬 CHAMAR NO WHATSAPP
     </a>
-
 </div>
+
 </body>
 </html>
