--- a/index.html
+++ b/index.html
@@ -6,41 +6,63 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-body {
+* {
     margin: 0;
-    background: #0b0f14;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background: #0b0f1a;
     display: flex;
     justify-content: center;
+    align-items: center;
+    min-height: 100vh;
     font-family: Arial, sans-serif;
 }
 
+/* CONTAINER PRINCIPAL */
 .container {
     position: relative;
     width: 100%;
-    max-width: 430px;
+    max-width: 430px; /* padrão celular */
 }
 
+/* IMAGEM PREMIUM */
 .container img {
     width: 100%;
-    height: auto; /* ISSO EVITA QUALQUER CORTE */
+    height: auto;
     display: block;
+    border-radius: 12px;
 }
 
-/* Botões invisíveis */
-.btn-area {
+/* ÁREA DOS BOTÕES (INVISÍVEL) */
+.actions {
     position: absolute;
-    left: 7%;
-    width: 86%;
-    height: 8%;
+    bottom: 6%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
 }
 
-/* Ajustes de posição (em % da imagem) */
-.ligar {
-    top: 68%;
+/* BOTÕES REAIS (TRANSPARENTES) */
+.action-btn {
+    display: block;
+    width: 100%;
+    height: 64px;
+    border-radius: 14px;
+    background: rgba(0,0,0,0);
+    text-indent: -9999px;
 }
 
-.whatsapp {
-    top: 79%;
+/* Ajuste fino para celulares muito pequenos */
+@media (max-height: 700px) {
+    .actions {
+        bottom: 4%;
+    }
 }
 </style>
 </head>
@@ -48,13 +70,22 @@ body {
 <body>
 
 <div class="container">
+    <!-- IMAGEM -->
+    <img src="newtruck.png" alt="Oliveira Diesel S.O.S 24H">
 
-    <img src="caminhaop.png" alt="Oliveira Diesel">
+    <!-- BOTÕES FUNCIONAIS -->
+    <div class="actions">
+        <a class="action-btn"
+           href="tel:5511964052649">
+           Ligar agora
+        </a>
 
-    <a class="btn-area ligar" href="tel:5511964052649"></a>
-
-    <a class="btn-area whatsapp" href="https://wa.me/5511964052649" target="_blank"></a>
-
+        <a class="action-btn"
+           href="https://wa.me/5511964052649"
+           target="_blank">
+           WhatsApp
+        </a>
+    </div>
 </div>
 
 </body>
