--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Oliveira Diesel</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
 <style>
 * {
@@ -17,25 +17,24 @@ html, body {
     height: 100%;
     background: #0b0f1a;
     font-family: Arial, sans-serif;
+    overflow: hidden; /* previne scroll */
 }
 
 /* CONTAINER PRINCIPAL */
 .container {
     position: relative;
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
+    height: 100%;
 }
 
 /* IMAGEM ÚNICA — FULLSCREEN */
 .container img {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    transform: translate(-50%, -50%);
-    object-fit: cover; /* preenche a tela */
+    object-fit: cover; /* cobre toda a tela mantendo proporção */
 }
 
 /* ÁREA DOS BOTÕES */
