--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@ html, body {
     position: relative;
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-/* IMAGEM ÚNICA — FULLSCREEN AJUSTADA */
+/* IMAGEM ÚNICA — FULLSCREEN RESPONSIVA */
 .container img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 95%;        /* reduzir para não cortar bordas */
-    height: auto;      /* mantém proporção */
-    max-height: 95%;   /* limita altura também */
-    transform: translate(-50%, -50%);
-    object-fit: contain; /* garante que toda a imagem seja visível */
+    max-width: 100%;       /* nunca ultrapassa a largura da tela */
+    max-height: 100%;      /* nunca ultrapassa a altura da tela */
+    width: auto;           /* mantém proporção */
+    height: auto;          /* mantém proporção */
+    display: block;
 }
 
 /* ÁREA DOS BOTÕES */
 .actions {
     position: absolute;
-    bottom: 7%;
+    bottom: 5%;
     left: 50%;
     transform: translateX(-50%);
     width: 85%;
@@ -61,12 +61,13 @@ html, body {
     text-indent: -9999px;
 }
 
-/* Ajuste para telas menores */
+/* Ajuste para telas muito pequenas */
 @media (max-height: 700px) {
     .actions {
-        bottom: 5%;
+        bottom: 3%;
     }
 }
+
 </style>
 </head>
 
