--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background: #0b0f1a; /* fundo escuro para bordas */
+    padding: 2%; /* garante margem mínima */
 }
 
-/* IMAGEM ÚNICA — FULLSCREEN RESPONSIVA */
+/* IMAGEM CINEMÁTICA */
 .container img {
-    max-width: 100%;       /* nunca ultrapassa a largura da tela */
-    max-height: 100%;      /* nunca ultrapassa a altura da tela */
-    width: auto;           /* mantém proporção */
-    height: auto;          /* mantém proporção */
+    max-width: 96%;      /* ligeira margem horizontal */
+    max-height: 96%;     /* ligeira margem vertical */
+    width: auto;
+    height: auto;
     display: block;
+    border-radius: 8px;  /* leve arredondamento */
+    box-shadow: 0 0 20px rgba(0,0,0,0.5); /* sombra escura ao redor */
 }
 
 /* ÁREA DOS BOTÕES */
@@ -67,7 +71,6 @@ html, body {
         bottom: 3%;
     }
 }
-
 </style>
 </head>
 
@@ -75,7 +78,7 @@ html, body {
 
 <div class="container">
 
-    <!-- IMAGEM ÚNICA -->
+    <!-- IMAGEM CINEMÁTICA -->
     <img src="newtruck.png" alt="Oliveira Diesel S.O.S 24H">
 
     <!-- BOTÕES -->
